# clean-bot-v2

./: .gitignore  BUILD_README.md  GET_EXE.md  INSTALL.md  MIRROR_CN.md  QUICKSTART.md  README.md  WINDOWS_INSTALL.md  build.bat  build_and_install.bat  build_installer.bat  cleanbot.spec  create_shortcut.bat  install.bat  installer.nsi  main.py  main_robot.py  preview.html  quick_install_cn.bat  requirements.txt  setup.bat  setup.cfg  setup.py  share_guide.txt  start.bat  start_cli.bat  start_robot.bat  version.json
config/: clean_rules.json  file_types.json  settings.json  update_config.json
core/: __init__.py  browser_cleaner.py  icon.py  scheduler.py  startup_optimizer.py  theme_manager.py  updater.py  utils.py
core/ai/: __init__.py  advanced_dialog.py  dialog_system.py  recommendation.py
core/analyzer/: __init__.py  smart_analyzer.py
core/cleaner/: __init__.py  file_cleaner.py
core/deep_cleaner/: __init__.py  deep_cleaner.py
core/diagnosis/: __init__.py  system_diagnosis.py
core/interactive/: __init__.py  interactive_cleaner.py
core/migrator/: __init__.py  app_migrator.py  file_migrator.py
core/monitor/: __init__.py  disk_monitor.py
core/optimizer/: __init__.py  memory_optimizer.py  registry_cleaner.py  service_optimizer.py  startup_manager.py
core/scanner/: __init__.py  file_scanner.py
resources/icons/: README.md
tests/: conftest.py  test_diagnosis.py  test_scanner.py
ui/: __init__.py  dashboard.py  main_window.py  progress_dialog.py  styles.py  theme_dialog.py  threads.py  update_dialog.py
ui/robot/: __init__.py  animation.py  (+4 more)
(+2 files in other folders)
