[metadata]
name = clean-bot
version = 2.1.0
author = PHOENIX
description = 智能桌面清理机器人
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/clean-bot-v2
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PyQt6>=6.5.0
    psutil>=5.9.0
    Pillow>=10.0.0
    send2trash>=1.8.0

[options.entry_points]
console_scripts =
    cleanbot = main:main
